# django-server-social

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
apps/core/: models.py
apps/feed/: models.py  serializers.py  viewsets.py
apps/user/: models.py  serializers.py  viewsets.py
config/: settings.py  urls.py
